<resources>
    <string name="app_name">My Application</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="title">Авторизация</string>
    <string name="title2">Регистрация</string>
    <string name="log">Логин</string>
    <string name="pass">Пароль</string>
    <string name="enter">Вход</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="Check">Проверить оценки</string>
    <string name="Schedule">Расписание уроков</string>

    <string name="Physics">Физика</string>

    <string name="Russian">Русский</string>

    <string name="English">Английский язык</string>

    <string name="ComputerScience">Информатика</string>

    <string name="Math">Алгебра</string>

    <string name="Biology">Биология</string>

    <string name="Geography">Георграфия</string>

    <string name="Empty">Заметки</string>

    <string name="Monday">Понедельник</string>

    <string name="Tuesday">Вторник</string>

    <string name="Wednesday">Среда</string>

    <string name="Thursday">Четверг</string>

    <string name="Friday">Пятница</string>

    <string name="Saturday">Суббота</string>
=======
    <string name="status"> Ваше число</string>
    <string name="title">Заголовок ситуации</string>
    <string name="description">Описание ситуации</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
>>>>>>> develop
=======
    <string name="first">Первое число</string>
    <string name="second">Второе число</string>
    <string name="sum">Сложить</string>
    <string name="diff">Вычитание</string>
    <string name="mult">Умножение</string>
    <string name="div">Деление</string>
    <string name="res">Результат</string>
>>>>>>> develop
</resources>
